2015-11-20  Julien Bect  <julien.bect@centralesupelec.fr>

	arrays/@stk_dataframe: Accept char and cell indices

	* arrays/@stk_dataframe/subsasgn.m: Accept char and cell indices.
	* arrays/@stk_dataframe/subsref.m: Accept char and cell indices.
	* arrays/@stk_dataframe/private/process_cell_indices.m: Process
	cell indices (cell arrays of row/column names).
	* arrays/@stk_dataframe/private/process_char_indices.m: Process
	char indices (row/column name).
	* arrays/@stk_dataframe/private/names_errmsg.m: Error messages for
	incorrect cell indices.

2015-11-19  Julien Bect  <julien.bect@centralesupelec.fr>

	Compatibility with Matlab >= R2014b: graphics handles are objects

	* arrays/@stk_dataframe/stk_dataframe.m: Enforce precedence over
	the matlab.graphics.axis.Axes class.
	* arrays/@stk_factorialdesign/stk_factorialdesign.m: Enforce
	precedence over the matlab.graphics.axis.Axes class.
	* arrays/@stk_dataframe/plot.m: Do not assume that graphics
	handles are doubles.
	* misc/plot/stk_plot_shadedci.m: Do not assume that graphics
	handles are doubles.

	stk_optim_fminsearch.m: Do not try to detect fminsearch

	* misc/optim/@stk_optim_fminsearch/stk_optim_fminsearch.m: Do not
	try to detect at this point whether fminsearch is available.

2015-11-15  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_init.m: Remove STK's root from the path if needed

	* stk_init.m (stk_init__pkg_unload): Remove STK's root from the
	path if needed.
	(stk_init__rmpath): Remove verbose comment.
	* admin/octpkg/patches/prevent-PKG_DEL-loop.patch: New patch.
	* admin/octpkg/patches/series: Add new patch to the series.
	* admin/octpkg/patches/remove-buildmex.patch: Refresh patch.
	* admin/octpkg/patches/remove-testprivatemex.patch: Refresh patch.

	stk_init.m: No need to remove other copies of STK from the path

	* stk_init.m (stk_init__rmpath): No need to remove other copies of
	STK from the search path. Even if several copies are on the path,
	only the most recently installed is visible.